--- a/Senior_Design/references.bib
+++ b/Senior_Design/references.bib
@@ -75,6 +75,29 @@
     url = {https://www.ieee.org/about/index.html},
     note = {2025-04-14}
 }
+
+@online{unity_camera_reference_2024,
+  author    = {{Unity Technologies}},
+  title     = {Camera Component Reference},
+  year      = {2024},
+  url       = {https://docs.unity3d.com/cn/Packages/com.unity.render-pipelines.universal@12.1/manual/camera-component-reference.html},
+  note      = {2025-04-01},
+}
+
+@online{unity_mesh_renderer_6000,
+  author    = {{Unity Technologies}},
+  title     = {Mesh Renderer},
+  url       = {https://docs.unity3d.com/6000.0/Documentation/ScriptReference/MeshRenderer.html},
+  note      = {Accessed: 2025-04-01},
+}
+
+@online{csdn_daniaoxp_2025,
+  author    = {DaniaoXP},
+  title     = {stm32F103入门学习},
+  year      = {2025},
+  url       = {https://blog.csdn.net/daniaoxp/article/details/100101149},
+  note      = {Accessed: 2025-03-16},
+}
 % END: Random Webpage
 
 % BEGIN: New Book
