--- a/Senior_Design/references.bib
+++ b/Senior_Design/references.bib
@@ -120,3 +120,31 @@
   pages = {200-220},
 }
 % END: New Journal Paper
+@misc{zhang2023csdn,
+  author       = {张大头},
+  title        = {步进闭环驱动说明书Rev1.3},
+  year         = {2023},
+  howpublished = {\url{https://blog.csdn.net/zhangdatou666/article/details/132644047}},
+  note         = {Accessed: 2025-05-18}
+}
+@misc{liu2024csdn,
+  author       = {艾格北峰},
+  title        = {CAN总线协议},
+  year         = {2024},
+  howpublished = {\url{https://blog.csdn.net/qq_35057766/article/details/135580884}},
+  note         = {Accessed: 2025-05-18}
+}
+@misc{stm32f407zg,
+  author       = {{STMicroelectronics}},
+  title        = {{STM32F407ZG - High-performance foundation line, Arm Cortex-M4 core with DSP and FPU, 1 Mbyte of Flash memory, 168 MHz CPU, ART Accelerator, Ethernet, FSMC}},
+  howpublished = {\url{https://www.st.com/en/microcontrollers-microprocessors/stm32f407zg.html}},
+  note         = {Accessed: 2025-05-17}
+}
+
+@manual{ti2023lm393,
+  title        = {LM393 Low Power Low Offset Voltage Dual Comparator},
+  author       = {{Texas Instruments}},
+  year         = {2023},
+  note         = {Datasheet},
+  url          = {https://www.ti.com.cn/cn/lit/ds/symlink/lm393.pdf}
+}
